k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo
  ports:
    - name: tcp
      protocol: TCP
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db
  ports:
    - name: tcp
      protocol: TCP
      port: 5432
